{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "aefb4e6a-e411-4742-827e-4453436c3ee7",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "afefaf5b-e864-414f-a9af-097bc4fe85a0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "15d94100-3f5b-44a6-a2aa-ca4ab34ac6d5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f3c54872-2b90-441c-8bf0-cb3ccfa5fee7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4f94f535-94b5-4fb8-8f92-f5c710ddda81",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a5a69930-3d86-4413-9611-7ef1b8d56d3e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "536bd55b-f98c-4b9a-bac5-11c8e41a316e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Camera",
            "id": "3d6f9e78-1529-4b79-8e41-4196ae1adb17",
            "actions": [
                {
                    "name": "DecreaseFov",
                    "type": "Button",
                    "id": "0f3d49ec-974e-4543-ad3c-7d5b9984889b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IncreaseFov",
                    "type": "Button",
                    "id": "d7e36414-72ba-47ac-95a2-5c4c7a2390c3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextCamera",
                    "type": "Button",
                    "id": "5370be4f-03da-4e43-9e45-0af81e6e5f51",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PreviousCamera",
                    "type": "Button",
                    "id": "d7326c33-a09a-46e1-98fa-df07f938d0d6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "53f6ae73-d151-4d67-9c14-b8e3944f5108",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecreaseFov",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42cbc9b9-5170-4cd7-abfd-87453e507fda",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncreaseFov",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea36502b-6832-4cc8-9d4a-aa06e062beda",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "372bc7b0-adef-48cd-9f1a-54b644049a35",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}